--- a/gan-chip-hub/package.json
+++ b/gan-chip-hub/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
+    "github-markdown-css": "^5.8.1",
     "gray-matter": "^4.0.3",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
