--- a/gan-chip-hub/package.json
+++ b/gan-chip-hub/package.json
@@ -12,9 +12,11 @@
     "fs": "^0.0.1-security",
     "github-markdown-css": "^5.8.1",
     "gray-matter": "^4.0.3",
+    "leaflet": "^1.9.4",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
