--- a/gan-chip-hub/package.json
+++ b/gan-chip-hub/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
